# swagger.json
@@ -246,6 +246,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           }
@@ -295,7 +298,7 @@
                   "type": "string",
                   "example": "review@gmail.com"
                 },
-                "newPassword": {
+                "password": {
                   "type": "string",
                   "example": "my-new-password"
                 }
@@ -312,6 +315,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
